--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,7 @@
 					<layers>
 						<enabled>true</enabled>
 					</layers>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
